<resources>
    <string name="app_name">FilmsCollection</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="nickname">Nickname:</string>
    <string name="enter_nickname">Enter nickname:</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter name:</string>
    <string name="surname">Surname:</string>
    <string name="enter_surname">Enter surname:</string>
    <string name="phone_number">Phone number:</string>
    <string name="enter_phone_number">Enter phone number:</string>
    <string name="address">Address:</string>
    <string name="enter_address">Enter address:</string>
    <string name="city">City:</string>
    <string name="enter_city">Enter city:</string>
    <string name="country">Country:</string>
    <string name="enter_country">Enter country:</string>
    <string name="age">Age:</string>
    <string name="enter_age">Enter age:</string>
    <string name="gender">Gender:</string>
    <string name="enter_gender">Enter gender:</string>
    <string name="save_changes">Save changes</string>
    <string name="to_favorites">To favorites</string>
</resources>