<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="38dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="13dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="13dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/retypePasswordEdit"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:inputType="textPassword"
        android:hint="@string/repeat_password" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:backgroundTint="@color/button"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/linkToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="13dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
</LinearLayout>